--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "src/index.js"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
